--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <!-- The URL of the Twitter API -->
+    <add key="Twitter_API_Url" value="http://localhost:55666/api" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
