--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
@@ -11,6 +11,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <!-- The URL of the Twitter API -->
     <add key="Twitter_API_Url" value="http://localhost:55666/api" />
+    <!-- Tweets endpoint -->
+    <add key="Tweets_Endpoint" value="/tweet" />
+    <!-- Users endpoint -->
+    <add key="Users_Endpoint" value="/user" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
