--- a/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
@@ -144,10 +144,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\TweetCompositeViewModel.cs" />
     <Compile Include="Models\TweetModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ConfigService.cs" />
     <Compile Include="Services\TweetService.cs" />
     <Compile Include="Services\TwitterApiRestClient.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -159,6 +163,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Tweet\Tweets.cshtml" />
+    <Content Include="Views\Tweet\Users.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
