Added EF and POST view

--- a/SimpleTwitterApp/SimpleTwitterApp.API/SimpleTwitterApp.API.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.API/SimpleTwitterApp.API.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Controllers\TweetController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Entities\TweetEntity.cs" />
+    <Compile Include="Enums\UserDeviceType.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
