--- a/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\TweetController.cs" />
+    <Compile Include="Enums\UserDeviceType.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -163,8 +164,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Tweet\Tweets.cshtml" />
     <Content Include="Views\Tweet\Users.cshtml" />
+    <Content Include="Views\Tweet\Tweets.cshtml" />
+    <Content Include="Views\Tweet\AddTweet.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
