Added Auth for MVC.

--- a/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
@@ -140,11 +140,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\TweetController.cs" />
     <Compile Include="Enums\UserDeviceType.cs" />
+    <Compile Include="Filters\AppAuthorizationFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\TweetCompositeViewModel.cs" />
     <Compile Include="Models\TweetModel.cs" />
     <Compile Include="Models\UserModel.cs" />
@@ -167,6 +170,7 @@
     <Content Include="Views\Tweet\Users.cshtml" />
     <Content Include="Views\Tweet\Tweets.cshtml" />
     <Content Include="Views\Tweet\AddTweet.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
