Added attribute routing

--- a/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
@@ -140,10 +140,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Constants\AppConstants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\TweetController.cs" />
     <Compile Include="Enums\UserDeviceType.cs" />
     <Compile Include="Filters\AppAuthorizationFilter.cs" />
+    <Compile Include="Filters\CustomExceptionFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -171,6 +174,7 @@
     <Content Include="Views\Tweet\Tweets.cshtml" />
     <Content Include="Views\Tweet\AddTweet.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
