--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
@@ -13,8 +13,10 @@
     <add key="Twitter_API_Url" value="http://localhost:55666/api" />
     <!-- Tweets endpoint -->
     <add key="Tweets_Endpoint" value="/tweet" />
-    <!-- Users endpoint -->
-    <add key="Users_Endpoint" value="/user" />
+    <!-- Users Get All endpoint -->
+    <add key="Users_Get_All_Endpoint" value="/users" />
+    <!-- Users Get By Username endpoint -->
+    <add key="Users_Get_By_Username_Endpoint" value="/users/userName" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
