End to end with static data.

--- a/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/SimpleTwitterApp.UI.csproj
@@ -139,6 +139,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Constants\AppConstants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -150,12 +151,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AddTweetCompositeViewModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\TweetCompositeViewModel.cs" />
     <Compile Include="Models\TweetModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ConfigService.cs" />
+    <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\TweetService.cs" />
     <Compile Include="Services\TwitterApiRestClient.cs" />
     <Compile Include="Services\UserService.cs" />
@@ -175,6 +178,7 @@
     <Content Include="Views\Tweet\AddTweet.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\Tweet\UserTweets.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
