--- a/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
+++ b/SimpleTwitterApp/SimpleTwitterApp.UI/Web.config
@@ -12,11 +12,13 @@
     <!-- The URL of the Twitter API -->
     <add key="Twitter_API_Url" value="http://localhost:55666/api" />
     <!-- Tweets endpoint -->
-    <add key="Tweets_Endpoint" value="/tweet" />
+    <add key="Tweets_Endpoint" value="/tweets" />
+    <!-- Tweets Get All By Username endpoint -->
+    <add key="Tweets_Get_All_By_Username_EndPoint" value="/tweets/" />
     <!-- Users Get All endpoint -->
     <add key="Users_Get_All_Endpoint" value="/users" />
     <!-- Users Get By Username endpoint -->
-    <add key="Users_Get_By_Username_Endpoint" value="/users/userName" />
+    <add key="Users_Get_By_Username_Endpoint" value="/users/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
