--- a/SimpleTwitterApp/SimpleTwitterApp.API/SimpleTwitterApp.API.csproj
+++ b/SimpleTwitterApp/SimpleTwitterApp.API/SimpleTwitterApp.API.csproj
@@ -125,12 +125,17 @@
     <Compile Include="Contexts\TweetContext.cs" />
     <Compile Include="Controllers\TweetController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Entities\DeviceTypeEntity.cs" />
     <Compile Include="Entities\TweetEntity.cs" />
+    <Compile Include="Entities\UserDeviceEntity.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
     <Compile Include="Enums\UserDeviceType.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DeviceTypeModel.cs" />
     <Compile Include="Models\TweetModel.cs" />
+    <Compile Include="Models\UserDeviceModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\TweetRepository.cs" />
