--- a/SimpleTwitterApp/SimpleTwitterApp.API/Web.config
+++ b/SimpleTwitterApp/SimpleTwitterApp.API/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SimpleTwitterContext" connectionString="Server=localhost;Initial Catalog=simple_twitter;" providerName="System.Data.SqlClient"/>
+    <add name="SimpleTwitterContext" connectionString="Server=(localdb)\MSSQLLocalDB;Initial Catalog=simple_twitter;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
